# designate

./: CHANGELOG.md  Dockerfile  README.md  action.yaml  pyproject.toml
.github/workflows/: release.yaml
designate/: cli.py
designate/deployment/: __init__.py  deployment.py  spinnaker.py
designate/errors/: __init__.py
designate/registry/: __init__.py  github.py  registry.py
